--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         </div>
     </header>
     <main>
+        <h1>Your Projects</h1>
         <div class="card">
             <h1>Super cool project</h1>
             <p class="inside">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id
